--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,29 @@
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="colorControlNormal">@android:color/white</item>
     </style>
+
+    <!--NAVIGATION DRAWER -->
+
+    <!-- Nav Drawer Txt -->
+    <style name="nav_drawer_txt">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <!-- Nav Drawer Title -->
+    <style name="nav_drawer_title" parent="nav_drawer_txt">
+        <item name="android:textSize">@dimen/nav_drawer_size_title</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <!-- Nav Drawer Name -->
+    <style name="nav_drawer_name" parent="nav_drawer_txt">
+        <item name="android:textSize">@dimen/nav_drawer_size_name</item>
+        <item name="android:textStyle">bold</item>
+
+    </style>
+
+    <!-- Nav Drawer Email -->
+    <style name="nav_drawer_email" parent="nav_drawer_txt">
+        <item name="android:textSize">@dimen/nav_drawer_size_email</item>
+    </style>
 </resources>
