--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
             <FrameLayout
                 android:id="@+id/nav_drawer_frame_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
         </LinearLayout>
 
         <com.google.android.material.navigation.NavigationView
@@ -60,7 +60,26 @@
             app:menu="@menu/menu_drawer"
             android:background="@color/nav_drawer_menu"
             app:itemTextColor="@color/white"
-            app:itemIconTint="@color/white"/>
+            app:itemIconTint="@color/white">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_width="140dp"
+                    android:layout_height="200dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:src="@drawable/ic_logo_go4lunch"
+                    android:fitsSystemWindows="true"
+                    android:contentDescription="@null"
+                    android:layout_marginBottom="18dp"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.navigation.NavigationView>
+        
 
     </androidx.drawerlayout.widget.DrawerLayout>
 
