--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,61 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
-    android:orientation="vertical"
-    android:background="@drawable/login_img_blurred_dark">
+    tools:context=".LoginActivity">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_logo_go4lunch"
-        android:layout_marginTop="70dp"
-        android:layout_gravity="center"
-        tools:ignore="ContentDescription" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/login_img_blurred_dark" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="70sp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".LoginActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_gravity="center"
-        android:text="@string/login_activity_catchphrase"
-        android:textColor="@color/white"
-        android:textSize="13sp"
-        android:textStyle="italic" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="70dp"
+            android:src="@drawable/ic_logo_go4lunch"
+            tools:ignore="ContentDescription" />
 
-    <Button
-        android:id="@+id/facebook_connect_btn"
-        android:layout_width="325dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/facebook_button_shape"
-        android:layout_gravity="center"
-        android:layout_marginTop="120dp"
-        android:drawableStart="@drawable/facebook_logo_white24"
-        android:text="@string/sign_in_facebook"
-        android:textColor="@color/white"
-        android:padding="12dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            android:textSize="70sp"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/google_connect_btn"
-        android:layout_width="325dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-       android:layout_marginTop="30dp"
-        android:background="@drawable/google_button_shape"
-        android:text="@string/sign_in_google"
-        android:drawableStart="@drawable/google_logo_white24"
-        android:textColor="@color/white"
-        android:padding="12dp"/>
-</LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/login_activity_catchphrase"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="13sp"
+            android:textStyle="italic" />
+
+        <Button
+            android:id="@+id/facebook_connect_btn"
+            android:layout_width="325dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="120dp"
+            android:background="@drawable/facebook_button_shape"
+            android:drawableStart="@drawable/facebook_logo_white24"
+            android:padding="12dp"
+            android:text="@string/sign_in_facebook"
+            android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/google_connect_btn"
+            android:layout_width="325dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/google_button_shape"
+            android:drawableStart="@drawable/google_logo_white24"
+            android:padding="12dp"
+            android:text="@string/sign_in_google"
+            android:textColor="@color/white" />
+    </LinearLayout>
+</FrameLayout>
