--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,11 +51,11 @@
             android:textStyle="italic" />
 
         <Button
-            android:id="@+id/facebook_connect_btn"
+            android:id="@+id/facebook_login_btn"
             android:layout_width="325dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="120dp"
+            android:layout_marginTop="100dp"
             android:background="@drawable/facebook_button_shape"
             android:drawableStart="@drawable/facebook_logo_white24"
             android:padding="12dp"
@@ -63,15 +63,35 @@
             android:textColor="@color/white" />
 
         <Button
-            android:id="@+id/google_connect_btn"
+            android:id="@+id/google_login_btn"
             android:layout_width="325dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="25dp"
             android:background="@drawable/google_button_shape"
             android:drawableStart="@drawable/google_logo_white24"
             android:padding="12dp"
             android:text="@string/sign_in_google"
             android:textColor="@color/white" />
+
+        <com.twitter.sdk.android.core.identity.TwitterLoginButton
+            android:id="@+id/twitter_login_btn"
+            android:layout_width="325dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:layout_gravity="center"/>
+
+<!--<com.twitter.sdk.android.core.identity.TwitterLoginButton
+    android:id="@+id/twitter_login_btn"
+    android:layout_width="325dp"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_marginTop="25dp"
+    android:background="@color/twitter_login_color"
+    android:drawableStart="@drawable/twitter_logo_white24"
+    android:padding="12dp"
+    android:text="@string/sign_in_twitter"
+    android:textColor="@color/white" />-->
+
     </LinearLayout>
 </FrameLayout>
