--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="notSelectedTabColor">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="nav_drawer_menu">#FF8A50</color>
-    <color name="facebook_connect_color">#507CC0</color>
-    <color name="google_connect_color">#DF4930</color>
+    <color name="facebook_login_color">#507CC0</color>
+    <color name="google_login_color">#DF4930</color>
+    <color name="twitter_login_color">#1DA1F2</color>
   </resources>
