--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -32,7 +32,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="@dimen/nav_header_margin_image"
         android:layout_marginBottom="@dimen/nav_header_margin_image"
-        android:background="@color/notSelectedTabColor"
+        android:background="@android:color/transparent"
         android:contentDescription="@null"
         android:src="@drawable/ic_baseline_person_24"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -49,6 +49,7 @@
         android:layout_marginTop="@dimen/nav_header_margin_txt"
         android:layout_marginEnd="@dimen/nav_header_margin_txt"
         android:textAllCaps="false"
+        android:background="#0FC"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/nav_header_image_view"
         app:layout_constraintTop_toTopOf="@id/nav_header_image_view" />
@@ -60,6 +61,7 @@
         android:layout_height="wrap_content"
         android:text="@string/navigation_header_user_email"
         android:textAllCaps="false"
+        android:background="#000"
         app:layout_constraintEnd_toEndOf="@id/nav_header_name_txt"
         app:layout_constraintStart_toStartOf="@id/nav_header_name_txt"
         app:layout_constraintTop_toBottomOf="@id/nav_header_name_txt" />
